--- a/publications.html
+++ b/publications.html
@@ -15,15 +15,18 @@
             <a href="index.html" class="brand">DILAB <span>.</span></a>
             <div class="nav-links">
                 <a href="index.html">Home</a>
+                <a href="research.html">Research</a>
                 <a href="people.html">People</a>
                 <a href="publications.html" class="active">Publications</a>
+                <a href="gallery.html">Gallery</a>
+                <a href="join.html">Join Us</a>
             </div>
         </div>
     </nav>
 
     <section class="page-header" style="padding-top: var(--spacing-xl);">
         <div class="container">
-            <h1>Publications</h1>
+            <h1>Publications 2025</h1>
         </div>
     </section>
 
