--- a/research.html
+++ b/research.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DILAB | Data Intelligence Lab</title>
-    <meta name="description" content="Data Intelligence Lab at Hankuk University of Foreign Studies (HUFS)">
+    <title>Research | DILAB</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -15,8 +14,8 @@
         <div class="container">
             <a href="index.html" class="brand">DILAB <span>.</span></a>
             <div class="nav-links">
-                <a href="index.html" class="active">Home</a>
-                <a href="research.html">Research</a>
+                <a href="index.html">Home</a>
+                <a href="research.html" class="active">Research</a>
                 <a href="people.html">People</a>
                 <a href="publications.html">Publications</a>
                 <a href="gallery.html">Gallery</a>
@@ -25,20 +24,14 @@
         </div>
     </nav>
 
-    <header class="hero">
+    <section class="page-header" style="padding-top: var(--spacing-xl);">
         <div class="container">
-            <div class="hero-content">
-                <h1>Bridging Data,<br>Intelligence & Humanity</h1>
-                <p>We are the Data Intelligence Lab at Hankuk University of Foreign Studies. Our research focuses on Data Mining, Machine Learning, and Natural Language Processing.</p>
-                <a href="publications.html" class="cta-button">View Publications</a>
-            </div>
+            <h1>Research</h1>
         </div>
-        <!-- Abstract visual background could go here -->
-    </header>
+    </section>
 
     <section id="research">
         <div class="container">
-            <h2>Research Areas</h2>
             <div class="grid">
                 <div class="card">
                     <h3>Natural Language Processing</h3>
@@ -51,25 +44,6 @@
                 <div class="card">
                     <h3>AI for Social Good</h3>
                     <p>Applying artificial intelligence techniques to solve critical societal challenges in education, healthcare, and accessibility.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="news">
-        <div class="container">
-            <h2>Recent News</h2>
-            <div class="news-list" style="margin-top: 2rem;">
-                <!-- Placeholder for dynamic news or manual list -->
-                <div class="pub-item">
-                    <span class="pub-meta">Dec 2025</span>
-                    <a href="#" class="pub-title">DILAB website launched!</a>
-                    <p class="pub-authors">Welcome to our new online home.</p>
-                </div>
-                <div class="pub-item">
-                    <span class="pub-meta">Nov 2025</span>
-                    <a href="#" class="pub-title">Paper accepted at EMNLP 2025</a>
-                    <p class="pub-authors">Our work on efficient RAG systems has been accepted.</p>
                 </div>
             </div>
         </div>
