--- a/people.html
+++ b/people.html
@@ -15,8 +15,11 @@
             <a href="index.html" class="brand">DILAB <span>.</span></a>
             <div class="nav-links">
                 <a href="index.html">Home</a>
+                <a href="research.html">Research</a>
                 <a href="people.html" class="active">People</a>
                 <a href="publications.html">Publications</a>
+                <a href="gallery.html">Gallery</a>
+                <a href="join.html">Join Us</a>
             </div>
         </div>
     </nav>
