main page completed

--- a/join.html
+++ b/join.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Join Data Intelligence Lab">
+    <link rel="icon" type="image/png" href="UI/farvicon_colored.png">
     <title>Join Us | DILAB</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,10 +14,11 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <a href="index.html" class="brand">DILAB <span>.</span></a>
+            <a href="index.html" class="brand">
+                <img src="UI/logo13.PNG" alt="DILAB Logo" class="brand-logo">
+            </a>
             <div class="nav-links">
                 <a href="index.html">Home</a>
-                <a href="research.html">Research</a>
                 <a href="people.html">People</a>
                 <a href="publications.html">Publications</a>
                 <a href="gallery.html">Gallery</a>
@@ -60,7 +63,18 @@
 
     <footer>
         <div class="container">
-            <p>&copy; <span id="current-year">2025</span> Data Intelligence Lab (DILAB). Hankuk University of Foreign Studies.</p>
+            <div class="footer-left">
+                <img src="UI/hufs.gif" alt="HUFS Logo" class="footer-logo">
+                <div class="footer-text">
+                    <p>&copy; <span id="current-year">2026</span> Data Intelligence Lab (DILAB).</p>
+                    <p><span class="hufs-brand"><span class="hufs-cap">H</span>ANKUK <span class="hufs-cap">U</span>NIVERSITY OF <span class="hufs-cap">F</span>OREIGN <span class="hufs-cap">S</span>TUDIES</span>.</p>
+                </div>
+            </div>
+            <div class="footer-right">
+                <p>#435, Faculty Office Building, Hankuk University of Foreign Studies, 107, Imun-ro, Dongdaemun-gu, Seoul, 02450, Republic of Korea</p>
+                <p>(02450) 서울특별시 동대문구 이문로 107 교수회관 435호</p>
+                <p>TEL. 02-2173-3149 | Email. seungtaek.choi@hufs.ac.kr</p>
+            </div>
         </div>
     </footer>
 
