--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DILAB | Data Intelligence Lab</title>
     <meta name="description" content="Data Intelligence Lab at Hankuk University of Foreign Studies (HUFS)">
+    <link rel="icon" type="image/png" href="UI/farvicon_colored.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -13,10 +14,11 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <a href="index.html" class="brand">DILAB <span>.</span></a>
+            <a href="index.html" class="brand">
+                <img src="UI/logo13.PNG" alt="DILAB Logo" class="brand-logo">
+            </a>
             <div class="nav-links">
                 <a href="index.html" class="active">Home</a>
-                <a href="research.html">Research</a>
                 <a href="people.html">People</a>
                 <a href="publications.html">Publications</a>
                 <a href="gallery.html">Gallery</a>
@@ -26,12 +28,11 @@
     </nav>
 
     <header class="hero">
-        <div class="container">
-            <div class="hero-content">
-                <h1>Bridging Data,<br>Intelligence & Humanity</h1>
-                <p>We are the Data Intelligence Lab at Hankuk University of Foreign Studies. Our research focuses on Data Mining, Machine Learning, and Natural Language Processing.</p>
-                <a href="publications.html" class="cta-button">View Publications</a>
-            </div>
+        <div class="hero-slider">
+            <div class="slide active" style="background-image: url('main-image/1.JPG')"></div>
+            <div class="slide" style="background-image: url('main-image/2.JPG')"></div>
+            <div class="slide" style="background-image: url('main-image/3.JPG')"></div>
+            <div class="slide" style="background-image: url('main-image/4.JPG')"></div>
         </div>
         <!-- Abstract visual background could go here -->
     </header>
@@ -41,17 +42,36 @@
             <h2>Research Areas</h2>
             <div class="grid">
                 <div class="card">
-                    <h3>Natural Language Processing</h3>
-                    <p>Building understanding between machines and human language through advanced Large Language Models and semantic analysis.</p>
+                    <h3>Assessment Framework and Methodology</h3>
+                    <p>System-based outcome evaluation and causality-based behavior assessment for model robustness and explainability.</p>
                 </div>
                 <div class="card">
-                    <h3>Data Mining</h3>
-                    <p>Extracting actionable patterns and knowledge from large-scale heterogeneous data sources.</p>
+                    <h3>Advanced Generative Systems</h3>
+                    <p>Knowledge-enhanced generation techniques and foundation model development with applications in large language models, embedding models, and multimodal AI.</p>
                 </div>
-                <div class="card">
-                    <h3>AI for Social Good</h3>
-                    <p>Applying artificial intelligence techniques to solve critical societal challenges in education, healthcare, and accessibility.</p>
-                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="highlight">
+        <div class="container">
+            <h2>Research Highlight</h2>
+            <div class="grid">
+                <a href="https://arxiv.org/pdf/2502.16457" class="highlight-item">
+                    <img src="research-highlight/1.JPG" alt="Highlight 1" class="highlight-img">
+                    <p class="highlight-desc">Towards Fully-Automated Materials Discovery via Large-Scale Synthesis Dataset and Expert-Level LLM-as-a-Judge</p>
+                    <p class="highlight-conf"><strong>CIKM 2025</strong></p>
+                </a>
+                <a href="https://watermark02.silverchair.com/tacl.a.34.pdf?token=AQECAHi208BE49Ooan9kkhW_Ercy7Dm3ZL_9Cf3qfKAc485ysgAAAzwwggM4BgkqhkiG9w0BBwagggMpMIIDJQIBADCCAx4GCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQM2xlo7pYQJHY2hlBxAgEQgIIC71PWgtgkprXTK_p4ZQIpMAvfVNG1VR3bCf1Rcy0d-pNC9Iux-aulUtxXeQqXv4udMg2rXbL9HvzoYtXp9sL2YjsRAZrEPHVzCyo_Zms6OUgAqXLmGyP5oIaRtSV83D79fa_AdklgnOLidxSn9f9jH_BN0iIaASSBACy9-6LzOO2wFeQwt-c0xHo7SqcZNd1kqR_F0HIQrMtZBOBakw5HhAe4KYuXhPBH69F7_iZqyaivU7iuem4xJjDfcXrGJfeQbUMOz-Q7_KmblC-1nIYm2eDpy0X6tazA3zwqUyhhAnIAzZVxlJSiJpkkSF139ah29rI99jVA9kYS5gjS-tMW5Xc0hJI2e5YmbWZsWI-uNIDa7bZFcT61ahHwT51ea-XoE8pg9E9W-hK2tGWLaeZ2_mAXl9I9poDQoxC4VCriIy6BlyzTIbxtIc__JjssQc0Od-OwjpVfQUiFPWPoanZ-B0TTcbW7LMp6NR2uC5EKvVAuM7-Ge8JcPg1dMvsWWV2xyiap1xHMwFygiJwVE-3ja-ChCkA8NjMW_XKDWJNGHlCienZJfp0Qd1zcunoFB3dzbIZshNoGWImYDCjjLmpA0xLoAiRvioUcLLI2RWlPimixjjLtYCbKzNKJBkNyUOD1k9DIrpG7DFkrJcsLmitkBS_RlZhVZAiX_egUdbdvQXRWOZgz9xy6QDGocavYkKOijTLWJ-cI8oKXyCsKQKwyx1sz2vRyceg79EtitXH9Jc3FUJiyPf-CFihuZzeV6GcXl5ryabinkE-OLS-HG9zR1_R8PNj_1YNYeN-HktpLTJFudIKPsN0Xh7vorz4hC8J0XAxt7wcq8l5qbV1ESkSsFFdruhj4ld1YWdejI16d1_NuE4IiMtGlGOms9DeiCrXT278t1UzGUp1qIm7CVTZ8yTDwY039LVCYzjKkpDEiJd47shdETWBI_r4Bc60rWnkc2JiMUZZbFaIV5FimZimZGsn1PfWIRL9526hAPcTnCmg" class="highlight-item">
+                    <img src="research-highlight/2.JPG" alt="Highlight 2" class="highlight-img">
+                    <p class="highlight-desc">Overcoming Source Object Grounding for Semantic Image Editing</p>
+                    <p class="highlight-conf"><strong>TACL 2025</strong></p>
+                </a>
+                <a href="https://arxiv.org/pdf/2410.15609" class="highlight-item">
+                    <img src="research-highlight/3.JPG" alt="Highlight 3" class="highlight-img">
+                    <p class="highlight-desc">Interventional Speech Noise Injection for ASR Generalizable Spoken Language Understanding</p>
+                    <p class="highlight-conf"><strong>EMNLP 2024</strong></p>
+                </a>
             </div>
         </div>
     </section>
@@ -60,16 +80,19 @@
         <div class="container">
             <h2>Recent News</h2>
             <div class="news-list" style="margin-top: 2rem;">
-                <!-- Placeholder for dynamic news or manual list -->
                 <div class="pub-item">
-                    <span class="pub-meta">Dec 2025</span>
-                    <a href="#" class="pub-title">DILAB website launched!</a>
-                    <p class="pub-authors">Welcome to our new online home.</p>
+                    <span class="pub-meta">Aug 2025</span>
+                    <a href="https://cikm2025.org/" class="pub-title">Two papers got accepted in CIKM 2025.</a>
+                    <p>Towards Fully-Automated Materials Discovery via Large-Scale Synthesis Dataset and Expert-Level LLM-as-a-Judge</p>
+                    <p>Rethinking the Training Paradigm of Discrete Token-Based Multimodal LLMs: An Analysis of Text-Centric Bias</p></div>
+                <div class="pub-item">
+                    <span class="pub-meta">Jun 2025</span>
+                    <a href="https://2025.emnlp.org/" class="pub-title">One paper got accepted in TACL and will be presented at EMNLP 2025.</a>
+                    <p>Overcoming Source Object Grounding for Semantic Image Editing</p>
                 </div>
                 <div class="pub-item">
-                    <span class="pub-meta">Nov 2025</span>
-                    <a href="#" class="pub-title">Paper accepted at EMNLP 2025</a>
-                    <p class="pub-authors">Our work on efficient RAG systems has been accepted.</p>
+                    <span class="pub-meta">Apr 2024</span>
+                    <a href="https://huggingface.co/yanolja/YanoljaNEXT-EEVE-10.8B" class="pub-title">EEVE-Korean has been awarded as the "LLM of the Year" (Pretrained) based on the Open Ko-LLM Leaderboard.</a>
                 </div>
             </div>
         </div>
@@ -77,7 +100,18 @@
 
     <footer>
         <div class="container">
-            <p>&copy; <span id="current-year">2025</span> Data Intelligence Lab (DILAB). Hankuk University of Foreign Studies.</p>
+            <div class="footer-left">
+                <img src="UI/hufs.gif" alt="HUFS Logo" class="footer-logo">
+                <div class="footer-text">
+                    <p>&copy; <span id="current-year">2026</span> Data Intelligence Lab (DILAB).</p>
+                    <p><span class="hufs-brand"><span class="hufs-cap">H</span>ANKUK <span class="hufs-cap">U</span>NIVERSITY OF <span class="hufs-cap">F</span>OREIGN <span class="hufs-cap">S</span>TUDIES</span>.</p>
+                </div>
+            </div>
+            <div class="footer-right">
+                <p>#435, Faculty Office Building, Hankuk University of Foreign Studies, 107, Imun-ro, Dongdaemun-gu, Seoul, 02450, Republic of Korea</p>
+                <p>(02450) 서울특별시 동대문구 이문로 107 교수회관 435호</p>
+                <p>TEL. 02-2173-3149 | Email. seungtaek.choi@hufs.ac.kr</p>
+            </div>
         </div>
     </footer>
 
