--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
             <h2>Recent News</h2>
             <div class="news-list" style="margin-top: 2rem;">
                 <div class="pub-item">
+                    <span class="pub-meta">Jan 2026</span>
+                    <a href="#" class="pub-title">DILAB Homepage Created</a>
+                    <p>Welcome to the new Data Intelligence Lab homepage.</p>
+                </div>
+                <div class="pub-item">
                     <span class="pub-meta">Aug 2025</span>
                     <a href="https://cikm2025.org/" class="pub-title">Two papers got accepted in CIKM 2025.</a>
                     <p>Towards Fully-Automated Materials Discovery via Large-Scale Synthesis Dataset and Expert-Level LLM-as-a-Judge</p>
