--- a/join.html
+++ b/join.html
@@ -41,15 +41,22 @@
                 </p>
 
                 <h3 style="margin-bottom: 1rem;">Open Positions</h3>
+
+                <div style="padding: 1rem; background: rgba(255, 193, 7, 0.15); border-left: 4px solid #ffc107; margin-bottom: 2rem; border-radius: 4px;">
+                    <p style="color: #856404; font-weight: 500; margin: 0; font-size: 0.95rem;">
+                        <strong>Current Recruitment Status:</strong> While we generally accept Graduate Students (M.S. / Ph.D.) and Undergraduate Interns, 
+                        <span style="text-decoration: underline;">we are currently ONLY accepting applications for Undergraduate Interns</span>.
+                    </p>
+                </div>
+
                 <ul style="list-style-type: disc; padding-left: 1.5rem; margin-bottom: 2rem; color: var(--color-text-muted);">
-                    <li style="margin-bottom: 0.5rem;"><strong>Graduate Students (M.S. / Ph.D.)</strong>: If you are interested in joining as a graduate student, please send your CV and transcript.</li>
-                    <li style="margin-bottom: 0.5rem;"><strong>Undergraduate Interns</strong>: We welcome undergraduate students who want to experience research.</li>
+                    <li style="margin-bottom: 0.5rem;"><strong>Undergraduate Interns</strong>: We welcome undergraduate students who want to experience research. To apply, please send your CV and transcript to the email below.</li>
                 </ul>
 
                 <h3 style="margin-bottom: 1rem;">Contact</h3>
                 <p style="margin-bottom: 2rem;">
-                    Please contact us via email if you are interested.<br>
-                    <a href="mailto:example@ex.com" style="color: var(--color-accent); font-weight: 600; font-size: 1.2rem;">example@ex.com</a>
+                    To apply, please send your CV and transcript to the email below.<br>
+                    <a href="mailto:seungtaek.choi@hufs.ac.kr" style="color: var(--color-accent); font-weight: 600; font-size: 1.2rem;">seungtaek.choi@hufs.ac.kr</a>
                 </p>
                 
                 <div style="padding: 1rem; background: var(--color-bg); border-left: 4px solid var(--color-accent);">
