mobile UI fixed

--- a/gallery.html
+++ b/gallery.html
@@ -17,6 +17,7 @@
             <a href="index.html" class="brand">
                 <img src="UI/logo13.PNG" alt="DILAB Logo" class="brand-logo">
             </a>
+            <button class="menu-toggle">☰</button>
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="people.html">People</a>
