--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="index.html" class="brand">
                 <img src="UI/logo13.PNG" alt="DILAB Logo" class="brand-logo">
             </a>
+            <button class="menu-toggle">☰</button>
             <div class="nav-links">
                 <a href="index.html" class="active">Home</a>
                 <a href="people.html">People</a>
@@ -34,7 +35,12 @@
             <div class="slide" style="background-image: url('main-image/3.JPG')"></div>
             <div class="slide" style="background-image: url('main-image/4.JPG')"></div>
         </div>
-        <!-- Abstract visual background could go here -->
+        <div class="hero-overlay">
+            <div class="hero-text-box">
+                <h1>Welcome to DILAB</h1>
+                <p>Data Intelligence Lab in HUFS</p>
+            </div>
+        </div>
     </header>
 
     <section id="research">
@@ -43,13 +49,16 @@
             <div class="grid">
                 <div class="card">
                     <h3>Assessment Framework and Methodology</h3>
-                    <p>System-based outcome evaluation and causality-based behavior assessment for model robustness and explainability.</p>
+                    <p>system-based outcome evaluation and causality-based behavior assessment for model robustness and explainability</p>
                 </div>
                 <div class="card">
                     <h3>Advanced Generative Systems</h3>
-                    <p>Knowledge-enhanced generation techniques and foundation model development with applications in large language models, embedding models, and multimodal AI.</p>
+                    <p>knowledge-enhanced generation techniques and foundation model development</p>
                 </div>
-            </div>
+                <div class="card">
+                    <h3>Multimodal Large Language Models</h3>
+                    <p>Multimodal large language models and their applications</p>
+                </div>
         </div>
     </section>
 
