Update Gallery: Add Coming Soon message

--- a/gallery.html
+++ b/gallery.html
@@ -35,42 +35,9 @@
 
     <section id="gallery">
         <div class="container">
-            <div class="gallery-grid" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: var(--spacing-md); margin-top: 2rem;">
-                <!-- Gallery Item 1 -->
-                <div class="gallery-item" style="border-radius: var(--radius-md); overflow: hidden; box-shadow: var(--shadow-sm);">
-                    <img src="images/gallery_1.png" alt="Academic Conference" style="width: 100%; height: 250px; object-fit: cover;">
-                    <div class="gallery-caption" style="padding: 1rem; background: var(--color-bg-card);">
-                        <p style="font-weight: 500; margin-bottom: 0.5rem;">Academic Conference</p>
-                        <p style="font-size: 0.9rem; color: var(--color-text-muted);">Presenting our latest research.</p>
-                    </div>
-                </div>
-
-                <!-- Gallery Item 2 -->
-                <div class="gallery-item" style="border-radius: var(--radius-md); overflow: hidden; box-shadow: var(--shadow-sm);">
-                    <img src="images/gallery_2.png" alt="Lab Meeting" style="width: 100%; height: 250px; object-fit: cover;">
-                    <div class="gallery-caption" style="padding: 1rem; background: var(--color-bg-card);">
-                        <p style="font-weight: 500; margin-bottom: 0.5rem;">Lab Meeting</p>
-                        <p style="font-size: 0.9rem; color: var(--color-text-muted);">Discussing new ideas and collaborations.</p>
-                    </div>
-                </div>
-
-                <!-- Gallery Item 3 -->
-                <div class="gallery-item" style="border-radius: var(--radius-md); overflow: hidden; box-shadow: var(--shadow-sm);">
-                    <img src="images/gallery_3.png" alt="Social Dinner" style="width: 100%; height: 250px; object-fit: cover;">
-                    <div class="gallery-caption" style="padding: 1rem; background: var(--color-bg-card);">
-                        <p style="font-weight: 500; margin-bottom: 0.5rem;">Social Event</p>
-                        <p style="font-size: 0.9rem; color: var(--color-text-muted);">Lab dinner with students.</p>
-                    </div>
-                </div>
-
-                 <!-- Gallery Item 4 -->
-                <div class="gallery-item" style="border-radius: var(--radius-md); overflow: hidden; box-shadow: var(--shadow-sm);">
-                    <img src="images/gallery_4.png" alt="Research Work" style="width: 100%; height: 250px; object-fit: cover;">
-                    <div class="gallery-caption" style="padding: 1rem; background: var(--color-bg-card);">
-                        <p style="font-weight: 500; margin-bottom: 0.5rem;">Research Work</p>
-                        <p style="font-size: 0.9rem; color: var(--color-text-muted);">Focused on coding and experiments.</p>
-                    </div>
-                </div>
+            <div style="min-height: 50vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
+                <h2 style="font-size: 4rem; margin-bottom: 1rem; color: var(--color-text-primary);">Coming Soon!</h2>
+                <p style="font-size: 1.2rem; color: var(--color-text-muted);">We are currently curating our gallery. Please check back later!</p>
             </div>
         </div>
     </section>
