easter egg hidden

--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
     <section id="gallery">
         <div class="container">
             <div style="min-height: 50vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
-                <h2 style="font-size: 4rem; margin-bottom: 1rem; color: var(--color-text-primary);">Coming Soon!</h2>
+                <h2 style="font-size: 4rem; font-weight: 700; margin-bottom: 1rem; color: var(--color-text-primary);">Coming Soon!</h2>
                 <p style="font-size: 1.2rem; color: var(--color-text-muted);">We are currently curating our gallery. Please check back later!</p>
             </div>
         </div>
