--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             <div class="grid">
                 <div class="card">
                     <h3>Assessment Framework and Methodology</h3>
-                    <p>system-based outcome evaluation and causality-based behavior assessment for model robustness and explainability</p>
+                    <p>System-based outcome evaluation and causality-based behavior assessment for model robustness and explainability</p>
                 </div>
                 <div class="card">
                     <h3>Advanced Generative Systems</h3>
-                    <p>knowledge-enhanced generation techniques and foundation model development</p>
+                    <p>Knowledge-enhanced generation techniques and foundation model development</p>
                 </div>
                 <div class="card">
                     <h3>Multimodal Large Language Models</h3>
@@ -91,7 +91,7 @@
             <div class="news-list" style="margin-top: 2rem;">
                 <div class="pub-item">
                     <span class="pub-meta">Jan 2026</span>
-                    <a href="#" class="pub-title">DILAB Homepage Created</a>
+                    <a href="javascript:void(0)" class="pub-title" id="news-modal-trigger">DILAB Homepage Created</a>
                     <p>Welcome to the new Data Intelligence Lab homepage.</p>
                 </div>
                 <div class="pub-item">
@@ -128,6 +128,16 @@
             </div>
         </div>
     </footer>
+
+    <!-- Modal for News -->
+    <div id="news-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-modal">&times;</span>
+            <div class="modal-body">
+                <p>Contributors: Jisoo Jang, Seoyeon Hwang, Seoyeon Choi</p>
+            </div>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
