--- a/join.html
+++ b/join.html
@@ -36,34 +36,34 @@
 
     <section id="join">
         <div class="container">
-            <div style="max-width: 800px; margin: 0 auto; background: var(--color-bg-card); padding: 3rem; border-radius: var(--radius-lg); box-shadow: var(--shadow-sm);">
-                <p style="font-size: 1.1rem; line-height: 1.7; margin-bottom: 2rem;">
-                    We are always looking for self-motivated students and researchers who are interested in data intelligence, natural language processing, and machine learning.
-                </p>
-
-                <h3 style="margin-bottom: 1rem;">Open Positions</h3>
-
-                <div style="padding: 1rem; background: rgba(255, 193, 7, 0.15); border-left: 4px solid #ffc107; margin-bottom: 2rem; border-radius: 4px;">
-                    <p style="color: #856404; font-weight: 500; margin: 0; font-size: 0.95rem;">
-                        <strong>Current Recruitment Status:</strong> While we generally accept Graduate Students (M.S. / Ph.D.) and Undergraduate Interns, 
-                        <span style="text-decoration: underline;">we are currently ONLY accepting applications for Undergraduate Interns</span>.
-                    </p>
-                </div>
-
-                <ul style="list-style-type: disc; padding-left: 1.5rem; margin-bottom: 2rem; color: var(--color-text-muted);">
-                    <li style="margin-bottom: 0.5rem;"><strong>Undergraduate Interns</strong>: We welcome undergraduate students who want to experience research. To apply, please send your CV and transcript to the email below.</li>
-                </ul>
-
-                <h3 style="margin-bottom: 1rem;">Contact</h3>
-                <p style="margin-bottom: 2rem;">
-                    To apply, please send your CV and transcript to the email below.<br>
-                    <a href="mailto:seungtaek.choi@hufs.ac.kr" style="color: var(--color-accent); font-weight: 600; font-size: 1.2rem;">seungtaek.choi@hufs.ac.kr</a>
-                </p>
+            <div style="max-width: 800px; margin: 0 auto; background: var(--color-bg-card); padding: 3rem; border-radius: 0; box-shadow: var(--shadow-sm); font-size: 1.1rem;">
+                <h2 style="margin-bottom: 2rem; border-bottom: 2px solid var(--color-accent); padding-bottom: 0.5rem; display: block; font-size: 2rem;">Join Our Lab</h2>
                 
-                <div style="padding: 1rem; background: var(--color-bg); border-left: 4px solid var(--color-accent);">
-                    <p style="font-size: 0.9rem;">
-                        <strong>Note:</strong> When you send an email, please use the subject line "[Prospective Student] Your Name".
+                <p style="line-height: 1.8; margin-bottom: 2.5rem; color: var(--color-text-main);">
+                    We are always looking for passionate researchers and students to join our team. 
+                </p>
+
+                <div style="background: var(--color-bg-alt); border: 1px solid var(--color-border); padding: 2rem; margin-bottom: 4rem; border-radius: 0;">
+                    <h3 style="font-size: 1.1rem; font-weight: 700; margin-bottom: 1.5rem; color: var(--color-accent);">Open Positions</h3>
+
+                    <div style="padding: 0; margin-bottom: 1.5rem; border-radius: 0;">
+                        <p style="color: #000000; font-weight: 500; margin-bottom: 1rem;">
+                            Current Recruitment Status:While we generally accept graduate students (M.S. / Ph.D.) and undergraduate interns, 
+                            <strong>we are currently ONLY accepting applications for undergraduate interns</strong>.
+                        </p>
+                        <p>Undergraduate Interns: We welcome undergraduate students who want to experience research.</p>
+                    </div>
+                </div>  
+
+                <div style="background: var(--color-bg-alt); border: 1px solid var(--color-border); padding: 2rem; border-radius: 0;">
+                    <h3 style="font-size: 1.1rem; font-weight: 700; margin-bottom: 1.5rem; color: var(--color-accent);">Contact</h3>
+                    <p style="margin-bottom: 1.5rem;">
+                        To apply, please send your CV and transcript to the email below.<br>
+                        <a href="mailto:seungtaek.choi@hufs.ac.kr" style="color: var(--color-accent-hover); font-weight: 600;">seungtaek.choi@hufs.ac.kr</a>
                     </p>
+                        <p>
+                            Note: When you send an email, please use the subject line "[Prospective Student] Your Name".
+                        </p>
                 </div>
             </div>
         </div>
