--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="nav-links">
                 <a href="index.html" class="active">Home</a>
                 <a href="people.html">People</a>
+                <a href="research.html">Research</a>
                 <a href="publications.html">Publications</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="join.html">Join Us</a>
@@ -45,26 +46,26 @@
 
     <section id="research">
         <div class="container">
-            <h2>Research Areas</h2>
+            <h1 style="padding-top: 2rem;">Research Areas</h1>
             <div class="grid">
-                <div class="card">
+                <a href="research.html#assessment" class="card">
                     <h3>Assessment Framework and Methodology</h3>
                     <p>System-based outcome evaluation and causality-based behavior assessment for model robustness and explainability</p>
-                </div>
-                <div class="card">
+                </a>
+                <a href="research.html#generative" class="card">
                     <h3>Advanced Generative Systems</h3>
                     <p>Knowledge-enhanced generation techniques and foundation model development</p>
-                </div>
-                <div class="card">
+                </a>
+                <a href="research.html#multimodal" class="card">
                     <h3>Multimodal Large Language Models</h3>
                     <p>Multimodal large language models and their applications</p>
-                </div>
+                </a>
         </div>
     </section>
 
     <section id="highlight">
         <div class="container">
-            <h2>Research Highlight</h2>
+            <h1>Research Highlight</h1>
             <div class="grid">
                 <a href="https://arxiv.org/pdf/2502.16457" class="highlight-item">
                     <img src="research-highlight/1.JPG" alt="Highlight 1" class="highlight-img">
@@ -87,7 +88,7 @@
 
     <section id="news">
         <div class="container">
-            <h2>Recent News</h2>
+            <h1>Recent News</h1>
             <div class="news-list" style="margin-top: 2rem;">
                 <div class="pub-item">
                     <span class="pub-meta">Jan 2026</span>
@@ -114,17 +115,16 @@
 
     <footer>
         <div class="container">
-            <div class="footer-left">
+            <div class="footer-content">
                 <img src="UI/hufs.gif" alt="HUFS Logo" class="footer-logo">
                 <div class="footer-text">
-                    <p>&copy; <span id="current-year">2026</span> Data Intelligence Lab (DILAB).</p>
-                    <p><span class="hufs-brand"><span class="hufs-cap">H</span>ANKUK <span class="hufs-cap">U</span>NIVERSITY OF <span class="hufs-cap">F</span>OREIGN <span class="hufs-cap">S</span>TUDIES</span>.</p>
+                    <p>&copy; <span id="current-year">2026</span> Data Intelligence Lab (DILAB). Division of Language & AI, College of AI Convergence, Hankuk University of Foreign Studies</p>
+                    <p>Suite 435, Faculty Office Building, 107, Imun-ro, Dongdaemun-gu, Seoul, 02450, Republic of Korea</p>
+                    <p>한국외국어대학교 AI융합대학 Language & AI 융합학부</p>
+                    <p>(02450) 서울특별시 동대문구 이문로 107 한국외국어대학교 서울캠퍼스 교수회관 435호</p>
+                    <p>TEL. 02-2173-3149</p>
+                    <p>Email. seungtaek.choi@hufs.ac.kr</p>
                 </div>
-            </div>
-            <div class="footer-right">
-                <p>#435, Faculty Office Building, Hankuk University of Foreign Studies, 107, Imun-ro, Dongdaemun-gu, Seoul, 02450, Republic of Korea</p>
-                <p>(02450) 서울특별시 동대문구 이문로 107 교수회관 435호</p>
-                <p>TEL. 02-2173-3149 | Email. seungtaek.choi@hufs.ac.kr</p>
             </div>
         </div>
     </footer>
