--- a/gallery.html
+++ b/gallery.html
@@ -21,6 +21,7 @@
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="people.html">People</a>
+                <a href="research.html">Research</a>
                 <a href="publications.html">Publications</a>
                 <a href="gallery.html" class="active">Gallery</a>
                 <a href="join.html">Join Us</a>
@@ -45,17 +46,16 @@
 
     <footer>
         <div class="container">
-            <div class="footer-left">
+            <div class="footer-content">
                 <img src="UI/hufs.gif" alt="HUFS Logo" class="footer-logo">
                 <div class="footer-text">
-                    <p>&copy; <span id="current-year">2026</span> Data Intelligence Lab (DILAB).</p>
-                    <p><span class="hufs-brand"><span class="hufs-cap">H</span>ANKUK <span class="hufs-cap">U</span>NIVERSITY OF <span class="hufs-cap">F</span>OREIGN <span class="hufs-cap">S</span>TUDIES</span>.</p>
+                    <p>&copy; <span id="current-year">2026</span> Data Intelligence Lab (DILAB). Division of Language & AI, College of AI Convergence, Hankuk University of Foreign Studies</p>
+                    <p>Suite 435, Faculty Office Building, 107, Imun-ro, Dongdaemun-gu, Seoul, 02450, Republic of Korea</p>
+                    <p>한국외국어대학교 AI융합대학 Language & AI 융합학부</p>
+                    <p>(02450) 서울특별시 동대문구 이문로 107 한국외국어대학교 서울캠퍼스 교수회관 435호</p>
+                    <p>TEL. 02-2173-3149</p>
+                    <p>Email. seungtaek.choi@hufs.ac.kr</p>
                 </div>
-            </div>
-            <div class="footer-right">
-                <p>#435, Faculty Office Building, Hankuk University of Foreign Studies, 107, Imun-ro, Dongdaemun-gu, Seoul, 02450, Republic of Korea</p>
-                <p>(02450) 서울특별시 동대문구 이문로 107 교수회관 435호</p>
-                <p>TEL. 02-2173-3149 | Email. seungtaek.choi@hufs.ac.kr</p>
             </div>
         </div>
     </footer>
