--- a/join.html
+++ b/join.html
@@ -21,6 +21,7 @@
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="people.html">People</a>
+                <a href="research.html">Research</a>
                 <a href="publications.html">Publications</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="join.html" class="active">Join Us</a>
@@ -36,33 +37,26 @@
 
     <section id="join">
         <div class="container">
-            <div style="max-width: 800px; margin: 0 auto; background: var(--color-bg-card); padding: 3rem; border-radius: 0; box-shadow: var(--shadow-sm); font-size: 1.1rem;">
-                <h2 style="margin-bottom: 2rem; border-bottom: 2px solid var(--color-accent); padding-bottom: 0.5rem; display: block; font-size: 2rem;">Join Our Lab</h2>
-                
-                <p style="line-height: 1.8; margin-bottom: 2.5rem; color: var(--color-text-main);">
-                    We are always looking for passionate researchers and students to join our team. 
-                </p>
-
-                <div style="background: var(--color-bg-alt); border: 1px solid var(--color-border); padding: 2rem; margin-bottom: 4rem; border-radius: 0;">
+            <div style="max-width: 1000px; margin: 0 auto; background: var(--color-bg-card); padding: 3rem; border-radius: 0; box-shadow: var(--shadow-sm); font-size: 1.1rem;">
+                <div style="background: var(--color-bg-alt); padding: 2rem; margin-bottom: 1rem; border-radius: 0;">
                     <h3 style="font-size: 1.1rem; font-weight: 700; margin-bottom: 1.5rem; color: var(--color-accent);">Open Positions</h3>
 
                     <div style="padding: 0; margin-bottom: 1.5rem; border-radius: 0;">
                         <p style="color: #000000; font-weight: 500; margin-bottom: 1rem;">
-                            Current Recruitment Status:While we generally accept graduate students (M.S. / Ph.D.) and undergraduate interns, 
-                            <strong>we are currently ONLY accepting applications for undergraduate interns</strong>.
+                            <strong>Current Recruitment Status:</strong> While we generally accept graduate students (M.S./Ph.D.) and undergraduate interns, 
+                            we are currently ONLY accepting applications for undergraduate interns.
                         </p>
-                        <p>Undergraduate Interns: We welcome undergraduate students who want to experience research.</p>
+                        <p><strong>Undergraduate Interns:</strong> We welcome undergraduate students who want to experience research.</p>
                     </div>
                 </div>  
 
-                <div style="background: var(--color-bg-alt); border: 1px solid var(--color-border); padding: 2rem; border-radius: 0;">
+                <div style="background: var(--color-bg-alt); padding: 2rem; border-radius: 0;">
                     <h3 style="font-size: 1.1rem; font-weight: 700; margin-bottom: 1.5rem; color: var(--color-accent);">Contact</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        To apply, please send your CV and transcript to the email below.<br>
-                        <a href="mailto:seungtaek.choi@hufs.ac.kr" style="color: var(--color-accent-hover); font-weight: 600;">seungtaek.choi@hufs.ac.kr</a>
+                        <strong>Application: </strong>Please send your CV and transcript to the email: <a href="mailto:seungtaek.choi@hufs.ac.kr" style="color: var(--color-accent-hover); font-weight: 600;">seungtaek.choi@hufs.ac.kr</a>
                     </p>
                         <p>
-                            Note: When you send an email, please use the subject line "[Prospective Student] Your Name".
+                            <strong>Notes:</strong> When you send an email, please use the subject line "[Prospective Student] Your Name".
                         </p>
                 </div>
             </div>
@@ -71,17 +65,16 @@
 
     <footer>
         <div class="container">
-            <div class="footer-left">
+            <div class="footer-content">
                 <img src="UI/hufs.gif" alt="HUFS Logo" class="footer-logo">
                 <div class="footer-text">
-                    <p>&copy; <span id="current-year">2026</span> Data Intelligence Lab (DILAB).</p>
-                    <p><span class="hufs-brand"><span class="hufs-cap">H</span>ANKUK <span class="hufs-cap">U</span>NIVERSITY OF <span class="hufs-cap">F</span>OREIGN <span class="hufs-cap">S</span>TUDIES</span>.</p>
+                    <p>&copy; <span id="current-year">2026</span> Data Intelligence Lab (DILAB). Division of Language & AI, College of AI Convergence, Hankuk University of Foreign Studies</p>
+                    <p>Suite 435, Faculty Office Building, 107, Imun-ro, Dongdaemun-gu, Seoul, 02450, Republic of Korea</p>
+                    <p>한국외국어대학교 AI융합대학 Language & AI 융합학부</p>
+                    <p>(02450) 서울특별시 동대문구 이문로 107 한국외국어대학교 서울캠퍼스 교수회관 435호</p>
+                    <p>TEL. 02-2173-3149</p>
+                    <p>Email. seungtaek.choi@hufs.ac.kr</p>
                 </div>
-            </div>
-            <div class="footer-right">
-                <p>#435, Faculty Office Building, Hankuk University of Foreign Studies, 107, Imun-ro, Dongdaemun-gu, Seoul, 02450, Republic of Korea</p>
-                <p>(02450) 서울특별시 동대문구 이문로 107 교수회관 435호</p>
-                <p>TEL. 02-2173-3149 | Email. seungtaek.choi@hufs.ac.kr</p>
             </div>
         </div>
     </footer>
