피드백 반영

--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,6 @@
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="people.html">People</a>
-                <a href="research.html">Research</a>
                 <a href="publications.html">Publications</a>
                 <a href="gallery.html" class="active">Gallery</a>
                 <a href="join.html">Join Us</a>
@@ -29,13 +28,13 @@
         </div>
     </nav>
 
-    <section class="page-header" style="padding-top: var(--spacing-xl);">
+    <section class="page-header" style="padding-top: var(--spacing-xl); padding-bottom: 0;">
         <div class="container">
-            <h1>Gallery</h1>
+            <h1 style="margin-bottom: var(--spacing-sm);">Gallery</h1>
         </div>
     </section>
 
-    <section id="gallery">
+    <section id="gallery" style="padding-top: var(--spacing-md);">
         <div class="container">
             <div style="min-height: 50vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
                 <h2 style="font-size: 4rem; font-weight: 700; margin-bottom: 1rem; color: var(--color-text-primary);">Coming Soon!</h2>
