--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             <div class="nav-links">
                 <a href="index.html" class="active">Home</a>
                 <a href="people.html">People</a>
-                <a href="research.html">Research</a>
                 <a href="publications.html">Publications</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="join.html">Join Us</a>
@@ -48,19 +47,19 @@
         <div class="container">
             <h1 style="padding-top: 2rem;">Research Areas</h1>
             <div class="grid">
-                <a href="research.html#assessment" class="card">
+                <div class="card">
                     <h3>Assessment Framework and Methodology</h3>
                     <p>System-based outcome evaluation and causality-based behavior assessment for model robustness and explainability</p>
-                </a>
-                <a href="research.html#generative" class="card">
+                </div>
+                <div class="card">
                     <h3>Advanced Generative Systems</h3>
                     <p>Knowledge-enhanced generation techniques and foundation model development</p>
-                </a>
-                <a href="research.html#multimodal" class="card">
+                </div>
+                <div class="card">
                     <h3>Multimodal Large Language Models</h3>
                     <p>Multimodal large language models and their applications</p>
-                </a>
-        </div>
+                </div>
+            </div>
     </section>
 
     <section id="highlight">
@@ -72,7 +71,7 @@
                     <p class="highlight-desc">Towards Fully-Automated Materials Discovery via Large-Scale Synthesis Dataset and Expert-Level LLM-as-a-Judge</p>
                     <p class="highlight-conf"><strong>CIKM 2025</strong></p>
                 </a>
-                <a href="https://watermark02.silverchair.com/tacl.a.34.pdf?token=AQECAHi208BE49Ooan9kkhW_Ercy7Dm3ZL_9Cf3qfKAc485ysgAAAzwwggM4BgkqhkiG9w0BBwagggMpMIIDJQIBADCCAx4GCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQM2xlo7pYQJHY2hlBxAgEQgIIC71PWgtgkprXTK_p4ZQIpMAvfVNG1VR3bCf1Rcy0d-pNC9Iux-aulUtxXeQqXv4udMg2rXbL9HvzoYtXp9sL2YjsRAZrEPHVzCyo_Zms6OUgAqXLmGyP5oIaRtSV83D79fa_AdklgnOLidxSn9f9jH_BN0iIaASSBACy9-6LzOO2wFeQwt-c0xHo7SqcZNd1kqR_F0HIQrMtZBOBakw5HhAe4KYuXhPBH69F7_iZqyaivU7iuem4xJjDfcXrGJfeQbUMOz-Q7_KmblC-1nIYm2eDpy0X6tazA3zwqUyhhAnIAzZVxlJSiJpkkSF139ah29rI99jVA9kYS5gjS-tMW5Xc0hJI2e5YmbWZsWI-uNIDa7bZFcT61ahHwT51ea-XoE8pg9E9W-hK2tGWLaeZ2_mAXl9I9poDQoxC4VCriIy6BlyzTIbxtIc__JjssQc0Od-OwjpVfQUiFPWPoanZ-B0TTcbW7LMp6NR2uC5EKvVAuM7-Ge8JcPg1dMvsWWV2xyiap1xHMwFygiJwVE-3ja-ChCkA8NjMW_XKDWJNGHlCienZJfp0Qd1zcunoFB3dzbIZshNoGWImYDCjjLmpA0xLoAiRvioUcLLI2RWlPimixjjLtYCbKzNKJBkNyUOD1k9DIrpG7DFkrJcsLmitkBS_RlZhVZAiX_egUdbdvQXRWOZgz9xy6QDGocavYkKOijTLWJ-cI8oKXyCsKQKwyx1sz2vRyceg79EtitXH9Jc3FUJiyPf-CFihuZzeV6GcXl5ryabinkE-OLS-HG9zR1_R8PNj_1YNYeN-HktpLTJFudIKPsN0Xh7vorz4hC8J0XAxt7wcq8l5qbV1ESkSsFFdruhj4ld1YWdejI16d1_NuE4IiMtGlGOms9DeiCrXT278t1UzGUp1qIm7CVTZ8yTDwY039LVCYzjKkpDEiJd47shdETWBI_r4Bc60rWnkc2JiMUZZbFaIV5FimZimZGsn1PfWIRL9526hAPcTnCmg" class="highlight-item">
+                <a href="https://direct.mit.edu/tacl/article/doi/10.1162/TACL.a.34/133180/Overcoming-Source-Object-Grounding-for-Semantic" class="highlight-item">
                     <img src="research-highlight/2.JPG" alt="Highlight 2" class="highlight-img">
                     <p class="highlight-desc">Overcoming Source Object Grounding for Semantic Image Editing</p>
                     <p class="highlight-conf"><strong>TACL 2025</strong></p>
