--- a/people.html
+++ b/people.html
@@ -21,7 +21,6 @@
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="people.html" class="active">People</a>
-                <a href="research.html">Research</a>
                 <a href="publications.html">Publications</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="join.html">Join Us</a>
@@ -29,13 +28,13 @@
         </div>
     </nav>
 
-    <section class="page-header" style="padding-top: var(--spacing-xl);">
+    <section class="page-header" style="padding-top: var(--spacing-xl); padding-bottom: 2rem;">
         <div class="container">
-            <h1>People</h1>
+            <h1 style="margin-bottom: var(--spacing-sm);">People</h1>
         </div>
     </section>
 
-    <section id="pi">
+    <section id="pi" style="padding-top: var(--spacing-md);">
         <div class="container">
             <h2 style="margin-bottom: 2rem; border-bottom: 2px solid var(--color-accent); padding-bottom: 0.5rem; display: block; font-size: 1.5rem;">Professor</h2>
             <div style="display: flex; gap: var(--spacing-md); flex-wrap: wrap; margin-top: 2rem;">
@@ -85,7 +84,7 @@
                 </div>
                 <div class="card person-card">
                     <img src="people/default.png" class="person-img" alt="Student Name">
-                    <div class="person-name">Hyuna Cho</div>
+                    <div class="person-name">Hyunah Cho</div>
                     <div class="person-role">Undergraduate Student</div>
                     <p class="person-desc"><strong>Research Interest:</strong></p>
                     <p class="person-email"><strong>Email:</strong> hyunah12977@hufs.ac.kr</p>
@@ -101,7 +100,7 @@
                     <img src="people/default.png" class="person-img" alt="Student Name">
                     <div class="person-name">Seoyeon Hwang</div>
                     <div class="person-role">Undergraduate Student</div>
-                    <p class="person-desc"><strong>Research Interest:</strong></p>
+                    <p class="person-desc"><strong>Research Interest:</strong> NLP, Speech AI</p>
                     <p class="person-email"><strong>Email:</strong> seoyon0401@naver.com</p>
                 </div>
             </div>
