--- a/join.html
+++ b/join.html
@@ -21,7 +21,6 @@
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="people.html">People</a>
-                <a href="research.html">Research</a>
                 <a href="publications.html">Publications</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="join.html" class="active">Join Us</a>
@@ -29,17 +28,17 @@
         </div>
     </nav>
 
-    <section class="page-header" style="padding-top: var(--spacing-xl);">
+    <section class="page-header" style="padding-top: var(--spacing-xl); padding-bottom: 0;">
         <div class="container">
-            <h1>Join Us</h1>
+            <h1 style="margin-bottom: var(--spacing-sm);">Join Us</h1>
         </div>
     </section>
 
-    <section id="join">
+    <section id="join" style="padding-top: var(--spacing-md);">
         <div class="container">
             <div style="max-width: 1000px; margin: 0 auto; background: var(--color-bg-card); padding: 3rem; border-radius: 0; box-shadow: var(--shadow-sm); font-size: 1.1rem;">
                 <div style="background: var(--color-bg-alt); padding: 2rem; margin-bottom: 1rem; border-radius: 0;">
-                    <h3 style="font-size: 1.1rem; font-weight: 700; margin-bottom: 1.5rem; color: var(--color-accent);">Open Positions</h3>
+                    <h2 style="font-size: 1.5rem; font-weight: 600; margin-bottom: 1.5rem; color: var(--color-accent);">Open Positions</h2>
 
                     <div style="padding: 0; margin-bottom: 1.5rem; border-radius: 0;">
                         <p style="color: #000000; font-weight: 500; margin-bottom: 1rem;">
@@ -51,7 +50,7 @@
                 </div>  
 
                 <div style="background: var(--color-bg-alt); padding: 2rem; border-radius: 0;">
-                    <h3 style="font-size: 1.1rem; font-weight: 700; margin-bottom: 1.5rem; color: var(--color-accent);">Contact</h3>
+                    <h2 style="font-size: 1.5rem; font-weight: 600; margin-bottom: 1.5rem; color: var(--color-accent);">Contact</h2>
                     <p style="margin-bottom: 1.5rem;">
                         <strong>Application: </strong>Please send your CV and transcript to the email: <a href="mailto:seungtaek.choi@hufs.ac.kr" style="color: var(--color-accent-hover); font-weight: 600;">seungtaek.choi@hufs.ac.kr</a>
                     </p>
