--- a/publications.html
+++ b/publications.html
@@ -23,7 +23,6 @@
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="people.html">People</a>
-                <a href="research.html">Research</a>
                 <a href="publications.html" class="active">Publications</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="join.html">Join Us</a>
@@ -31,15 +30,14 @@
         </div>
     </nav>
 
-    <section class="page-header" style="padding-top: var(--spacing-xl);">
+    <section class="page-header" style="padding-top: var(--spacing-xl);padding-bottom: 0rem;">
         <div class="container">
-            <h1>Publications</h1>
+            <h1 style="margin-bottom: var(--spacing-sm);">Publications</h1>
         </div>
     </section>
 
-    <section id="publications">
+    <section id="publications" style="padding-top: var(--spacing-md);">
         <div class="container">
-            <!-- 2025 -->
             <h2 class="pub-year">2025</h2>
 
             <div class="pub-item">
