padding, research interest modify

--- a/join.html
+++ b/join.html
@@ -36,8 +36,8 @@
 
     <section id="join" style="padding-top: var(--spacing-md);">
         <div class="container">
-            <div style="max-width: 1000px; margin: 0 auto; background: var(--color-bg-card); padding: 3rem; border-radius: 0; box-shadow: var(--shadow-sm); font-size: 1.1rem;">
-                <div style="background: var(--color-bg-alt); padding: 2rem; margin-bottom: 1rem; border-radius: 0;">
+            <div style="max-width: 1000px; margin: 0 auto; background: var(--color-bg-card); padding: 3rem 1.5rem; border-radius: 0; box-shadow: var(--shadow-sm); font-size: 1.1rem;">
+                <div style="background: var(--color-bg-alt); padding: 2rem 1.25rem; margin-bottom: 1rem; border-radius: 0;">
                     <h2 style="font-size: 1.5rem; font-weight: 600; margin-bottom: 1.5rem; color: var(--color-accent);">Open Positions</h2>
 
                     <div style="padding: 0; margin-bottom: 1.5rem; border-radius: 0;">
@@ -49,7 +49,7 @@
                     </div>
                 </div>  
 
-                <div style="background: var(--color-bg-alt); padding: 2rem; border-radius: 0;">
+                <div style="background: var(--color-bg-alt); padding: 2rem 1.25rem; border-radius: 0;">
                     <h2 style="font-size: 1.5rem; font-weight: 600; margin-bottom: 1.5rem; color: var(--color-accent);">Contact</h2>
                     <p style="margin-bottom: 1.5rem;">
                         <strong>Application: </strong>Please send your CV and transcript to the email: <a href="mailto:seungtaek.choi@hufs.ac.kr" style="color: var(--color-accent-hover); font-weight: 600;">seungtaek.choi@hufs.ac.kr</a>
