--- a/people.html
+++ b/people.html
@@ -64,7 +64,7 @@
                     <img src="people/jisoo.jpg" class="person-img" alt="Student Name">
                     <div class="person-name">Jisoo Jang</div>
                     <div class="person-role">Undergraduate Student</div>
-                    <p class="person-desc"><strong>Research Interest:</strong> Scalable Emotional Intelligence via Verifiable Reward Learning (RLVR) </p>
+                    <p class="person-desc"><strong>Research Interest:</strong> Emotional Intelligence</p>
                     <p class="person-email"><strong>Email:</strong> jsjang0104@naver.com</p>
                 </div>
 
